--- a/angular2/src/app/deck/deck.component.css
+++ b/angular2/src/app/deck/deck.component.css
@@ -56,3 +56,178 @@
   width: 100%;
   margin-bottom: 20px;
 }
+.show-value {
+  min-height: 700px;
+  background-color: White;
+  border-radius: 10px;
+  border: 1px solid #fff;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.04);
+  width: auto;
+}
+.show-value .slide {
+  height: 200px;
+  width: 100%;
+  background-color: #ddddff;
+  border-radius: 8px;
+}
+.show-value .favorites {
+  min-height: 350px;
+}
+.show-value .favorites .title {
+  font-size: 30px;
+  font-weight: bold;
+  padding: 20px;
+}
+.show-value .favorites .item-deck {
+  height: 240px;
+  padding: 10px;
+  width: 170px;
+}
+.show-value .favorites .item-deck img {
+  width: 100%;
+  border-radius: 18px;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.17);
+}
+.show-value .favorites .item-deck .image-cover {
+  height: 174px;
+  background-color: #fff;
+}
+.show-value .favorites .item-deck .name {
+  margin-top: 10px;
+}
+.show-value .favorites .item-deck .name .name-deck {
+  color: #5c5c5c;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.header-wrap {
+  height: 100px;
+}
+
+header {
+  background-color: #00CCFC;
+  height: 60px;
+}
+
+.header-logo {
+  height: 60px;
+  margin: auto;
+  max-width: 1082px;
+  padding: 0;
+  position: relative;
+}
+
+.inner {
+  display: flex;
+  justify-content: space-between;
+  max-height: 100%;
+}
+
+.nav-logo {
+  display: flex;
+}
+
+.nav-logo-image {
+  margin-top: 5px;
+}
+
+.name-logo {
+  color: White;
+  font-size: 30px;
+  font-weight: bold;
+  margin: auto 8px;
+}
+
+.search-form {
+  width: 320px;
+  border: none;
+  border-radius: 10px;
+}
+
+.search-input {
+  background-color: #fff;
+  border: none;
+  border-radius: 10px;
+  box-sizing: border-box;
+  color: #5c5c5c;
+  font-size: 15px;
+  height: 42px;
+  padding: 5px 0 0 50px;
+  width: 100%;
+}
+
+.search-input:placeholder-shown {
+  background-color: #6fdcff;
+}
+
+.search-input::placeholder {
+  color: #fff;
+  font-family: DINNextRoundedLTPro-Medium, sans-serif;
+  opacity: .8;
+  text-transform: uppercase;
+}
+
+.search-input-focus {
+  background-color: #fff;
+}
+
+.txt-home {
+  color: White;
+  display: inline-block;
+  font-size: 32px;
+  font-weight: bold;
+  margin-right: 20px;
+}
+
+.nav-list {
+  display: flex;
+  position: absolute;
+  -webkit-box-flex: 0;
+  -ms-flex-positive: 0;
+  flex-grow: 0;
+  position: absolute;
+  right: -20px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.nav-list .nav-item {
+  color: White;
+  display: block;
+  padding: 15px 15px;
+}
+.nav-list .nav-item .nav-text {
+  display: inline-block;
+  font-family: DINNextRoundedLTPro-Bold, sans-serif;
+  font-size: 15px;
+  margin-top: -7px;
+  text-transform: uppercase;
+  vertical-align: middle;
+  height: 20px;
+}
+.nav-list .nav-item-active {
+  border-bottom: 2px solid #fff;
+}
+.nav-list .cl-text {
+  color: White;
+}
+
+.nav-icon {
+  font-size: 24px;
+}
+
+footer .quick-links {
+  margin-bottom: 20px;
+  margin-top: 90px;
+  text-align: center;
+}
+footer .quick-links .link-item {
+  color: #c4c4c4;
+  font-weight: bold;
+  margin: 20px;
+  padding: 15px;
+}
+.list-decks-favor {
+  display: inline-flex;
+}
