refactor deck details

--- a/angular2/src/app/deck-details/deck-details.component.css
+++ b/angular2/src/app/deck-details/deck-details.component.css
@@ -111,6 +111,7 @@
   color: darkgray;
   font-weight: bold;
   margin-right: 35px;
+  cursor: pointer;
 }
 .right .s-select .s-active {
   border-bottom: 2px solid lightskyblue;
