--- a/angular2/src/app/deck-details/deck-details.component.html
+++ b/angular2/src/app/deck-details/deck-details.component.html
@@ -26,18 +26,6 @@
         </div>
       </div>
     </div>
-    <div class="row" *ngFor="let card of cards">
-                  <div class="containerr">
-                    <div class="ct-card">
-                      <div class="item-card front">
-                          <p>{{card.front}}</p>
-                      </div>
-                      <div class="item-card back">
-                        <p>{{card.back}}</p>
-                      </div>
-                    </div>
-                  </div>
-              </div>
     <div class="col-xs-12 col-md-8">
       <div class="right">
         <div class="s-select">
@@ -46,7 +34,7 @@
         </div>
         <hr style="margin-top: 0;">
 
-        <div class="container">
+        <div class="container" style="width: 100%; margin: auto">
           <div id="b1" class="containerTab">
             <div class="list-lesson">
               <div class="row">
@@ -66,20 +54,20 @@
 
           <div id="b2" class="containerTab" style="display:none;">
             <div class="list-card">
-              <div class="row" *ngFor="let card of deck.cards">
-                  <div class="containerr">
-                    <div class="ct-card" (click)="flipped($event)" [class.flipped]="menuOpen">
-                      <div class="item-card front">
-                        <span *ngIf="card.picture">
-                          <img src="{{card.picture.url}}">
-                        </span>
-                        <p>{{card.front}}</p>
-                      </div>
-                      <div class="item-card back">
-                        <p>{{card.back}}</p>
-                      </div>
+              <div class="row">
+                <div class="containerr" *ngFor="let card of deck.cards">
+                  <div class="ct-card" (click)="flipped($event)" [class.flipped]="menuOpen">
+                    <div class="item-card front">
+                      <span *ngIf="card.picture">
+                        <img src="{{card.picture.url}}">
+                      </span>
+                      <p>{{card.front}}</p>
+                    </div>
+                    <div class="item-card back">
+                      <p>{{card.back}}</p>
                     </div>
                   </div>
+                </div>
               </div>
             </div>
           </div>
