--- a/angular2/src/app/deck/deck.component.css
+++ b/angular2/src/app/deck/deck.component.css
@@ -64,7 +64,7 @@
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.04);
   width: auto;
 }
-.show-value .slide {
+.show-value .slider {
   height: 200px;
   width: 100%;
   background-color: #ddddff;
@@ -229,5 +229,5 @@ footer .quick-links .link-item {
   padding: 15px;
 }
 .list-decks-favor {
-  display: inline-flex;
+  padding: 2%;
 }
