--- a/angular2/src/app/deck/deck.component.html
+++ b/angular2/src/app/deck/deck.component.html
@@ -1,5 +1,5 @@
 <div class="show-value">
-  <div class="slide">
+  <div class="slider">
     <h1>Slide</h1>
   </div>
   <div class="favorites">
@@ -7,8 +7,8 @@
       <span class="txt">Your favorites</span>
     </div>
     <div class="list-decks-favor">
-      <div class="row" style="margin: auto;">
-        <div class="col-md-2" *ngFor="let deck of decks | async">
+      <slick-carousel class="carousel">
+        <div class="slide" *ngFor="let deck of decks">
           <div class="item-deck">
             <div class="image-cover">
               <a href ="#" [routerLink]="['/decks', deck.id]">
@@ -20,7 +20,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </slick-carousel>
     </div>
   </div>
 </div>
