--- a/angular2/src/styles.css
+++ b/angular2/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+.slick-prev:before, .slick-next:before {
+  color: #32CDFF !important;
+}
