--- a/angular2/src/app/deck-details/deck-details.component.html
+++ b/angular2/src/app/deck-details/deck-details.component.html
@@ -29,7 +29,7 @@
     <div class="col-xs-12 col-md-8">
       <div class="right">
         <div class="s-select">
-          <span (click)="openTab('b1','bb1');" id="bb1" class="s-txt lessons s-active"> LESSONS</span>
+          <span (click)="openTab('b1','bb1');" id="bb1" class="s-txt lessons tab-active"> LESSONS</span>
           <span (click)="openTab('b2','bb2');" id="bb2" class="s-txt cards"> CARDS ({{deck.cards.length}})</span>
         </div>
         <hr style="margin-top: 0;">
