--- a/angular2/src/app/header/header.component.html
+++ b/angular2/src/app/header/header.component.html
@@ -4,7 +4,7 @@
     <div class="logo">
       <a href="#" [routerLink]="['/']"><img src="./assets/images/logo.jpg" alt="logo"></a>
       <div class="name-logo">
-        <a href="#" [routerLink]="['/']">Tinycard</a>
+        <a href="#" [routerLink]="['/']">tinycard</a>
       </div>
     </div>
 
