--- a/angular2/src/app/header/header.component.css
+++ b/angular2/src/app/header/header.component.css
@@ -19,16 +19,18 @@ header .header-logo .inner .logo {
   display: flex;
 }
 header .header-logo .inner .logo .name-logo {
-  font-size: 30px;
-  font-weight: bold;
-  margin: auto 8px;
+  font-size: 35px;
+  font-weight: 300;
+  margin: 8px;
   opacity: .95;
+  font-family: DINNextRoundedLTPro-Medium,sans-serif;
 }
 header .header-logo .inner .logo .name-logo a:hover {
   text-decoration: none;
 }
 header .header-logo .inner .logo .name-logo a {
   color: White;
+  text-decoration: none;
 }
 header .header-logo .inner .search {
   margin-top: 9px;
@@ -81,7 +83,6 @@ header .header-logo .inner .nav-list .nav-item a{
   text-transform: uppercase;
   vertical-align: middle;
   opacity: .9;
-  filter: alpha(opacity=);
 }
 
 footer .quick-links {
