--- a/angular2/src/app/user/login.component.html
+++ b/angular2/src/app/user/login.component.html
@@ -1,38 +1,37 @@
 <div class="row">
-<div class="col-md-8"></div>
-<div class="col-md-4">
-  <div class="card login-form shadow-nohover">
-    <div class="text-center login-form-label">Log in with your account</div>
-    <div class="text-center">
-      Don't have an account?
-      <a href="signup" class="link-custome">Signup</a>
-    </div>
-    <div class="social-login">
-      <button class="btn btn-block google-signin btn-social-signin">Sign in with Google</button>
-      <button class="btn btn-block facebook-signin btn-social-signin">Sign in with Facebook</button>
-    </div>
-    <div class="devide-login">
-      <div class="devide-text">or</div>
-    </div>
-
-    <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
-      <div class="form-group">
-        <label for="">Email address</label>
-        <input type="text" autofocus="true" class="form-control"
-        placeholder="Enter email" name="email" [(ngModel)]="model.email" #email="ngModel" required >
+  <div class="col-md-4 col-md-offset-4">
+    <div class="card login-form shadow-nohover">
+      <div class="text-center login-form-label">Log in with your account</div>
+      <div class="text-center">
+        Don't have an account?
+        <a href="signup" class="link-custome">Signup</a>
+      </div>
+      <div class="social-login">
+        <button class="btn btn-block google-signin btn-social-signin">Sign in with Google</button>
+        <button class="btn btn-block facebook-signin btn-social-signin">Sign in with Facebook</button>
+      </div>
+      <div class="devide-login">
+        <div class="devide-text">or</div>
       </div>
 
-      <div class="form-group">
-        <label for="">Password</label>
-        <input type="password" autocomplete="off" class="form-control"
-        placeholder="Password" name="password" [(ngModel)]="model.password" #password="ngModel" required>
-      </div>
+      <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
+        <div class="form-group">
+          <label for="">Email address</label>
+          <input type="text" autofocus="true" class="form-control"
+          placeholder="Enter email" name="email" [(ngModel)]="model.email" #email="ngModel" required >
+        </div>
 
-      <button type="submit" class="btn btn-block btn-custome">LOG IN</button>
-    </form>
+        <div class="form-group">
+          <label for="">Password</label>
+          <input type="password" autocomplete="off" class="form-control"
+          placeholder="Password" name="password" [(ngModel)]="model.password" #password="ngModel" required>
+        </div>
 
+        <button type="submit" class="btn btn-block btn-custome">LOG IN</button>
+      </form>
+
+    </div>
   </div>
-</div>
 </div>
 
 
