--- a/angular2/src/app/user/signup.component.html
+++ b/angular2/src/app/user/signup.component.html
@@ -1,7 +1,5 @@
 <div class="row">
-  <div class="col-md-8">
-  </div>
-  <div class="col-md-4">
+  <div class="col-md-4 col-md-offset-4">
     <div class="card login-form shadow-nohover">
       <h2 class="text-center login-form-label">Create your account</h2>
       <div class="text-center">
