--- a/angular2/src/app/user/login.component.html
+++ b/angular2/src/app/user/login.component.html
@@ -4,7 +4,7 @@
       <div class="text-center login-form-label">Log in with your account</div>
       <div class="text-center">
         Don't have an account?
-        <a href="signup" class="link-custome">Signup</a>
+        <a href="#" [routerLink]="['/signup']" class="link-custome">Signup</a>
       </div>
       <div class="social-login">
         <button class="btn btn-block google-signin btn-social-signin">Sign in with Google</button>
