--- a/angular2/src/app/deck/deck.component.css
+++ b/angular2/src/app/deck/deck.component.css
@@ -1,61 +1,3 @@
-.left {
-  padding: 20px;
-}
-.left .img-deck img {
-  width: 90%;
-  margin: auto;
-  display: block;
-  border-radius: 20px;
-}
-.left .txt {
-  margin: 15px;
-}
-.left .txt .name-deck {
-  font-size: 25px;
-  font-weight: bold;
-}
-.left .txt .author {
-  margin-top: 15px;
-  margin-bottom: 15px;
-}
-.left .txt .author img {
-  width: 40px;
-}
-.left .txt .author .name {
-  margin-left: 10px;
-  font-weight: bold;
-  color: cornflowerblue;
-}
-.left .favorite {
-  margin: auto;
-}
-
-.right {
-  margin-top: 20px;
-  height: 500px;
-  background-color: #fff;
-  border-radius: 15px;
-}
-.right .s-select {
-  padding: 20px;
-  margin-left: 25px;
-}
-.right .s-select .s-txt {
-  margin-right: 35px;
-  font-weight: bold;
-  color: darkgray;
-}
-.right .s-select .s-active {
-  color: lightskyblue;
-  border-bottom: 2px solid lightskyblue;
-}
-.right .containerTab {
-  margin-top: 30px;
-}
-.right .list-lesson .item-lesson img {
-  width: 100%;
-  margin-bottom: 20px;
-}
 .show-value {
   min-height: 700px;
   background-color: White;
@@ -92,6 +34,11 @@
   height: 174px;
   background-color: #fff;
 }
+.show-value .favorites .item-deck .image-cover a {
+  height: 174px;
+  background-color: #fff;
+  outline: none;
+}
 .show-value .favorites .item-deck .name {
   margin-top: 10px;
 }
@@ -100,134 +47,9 @@
   font-size: 18px;
   font-weight: bold;
 }
-
-.header-wrap {
-  height: 100px;
-}
-
-header {
-  background-color: #00CCFC;
-  height: 60px;
-}
-
-.header-logo {
-  height: 60px;
-  margin: auto;
-  max-width: 1082px;
-  padding: 0;
-  position: relative;
-}
-
-.inner {
-  display: flex;
-  justify-content: space-between;
-  max-height: 100%;
-}
-
-.nav-logo {
-  display: flex;
-}
-
-.nav-logo-image {
-  margin-top: 5px;
-}
-
-.name-logo {
-  color: White;
-  font-size: 30px;
-  font-weight: bold;
-  margin: auto 8px;
-}
-
-.search-form {
-  width: 320px;
-  border: none;
-  border-radius: 10px;
-}
-
-.search-input {
-  background-color: #fff;
-  border: none;
-  border-radius: 10px;
-  box-sizing: border-box;
-  color: #5c5c5c;
-  font-size: 15px;
-  height: 42px;
-  padding: 5px 0 0 50px;
-  width: 100%;
-}
-
-.search-input:placeholder-shown {
-  background-color: #6fdcff;
-}
-
-.search-input::placeholder {
-  color: #fff;
-  font-family: DINNextRoundedLTPro-Medium, sans-serif;
-  opacity: .8;
-  text-transform: uppercase;
-}
-
-.search-input-focus {
-  background-color: #fff;
-}
-
-.txt-home {
-  color: White;
-  display: inline-block;
-  font-size: 32px;
-  font-weight: bold;
-  margin-right: 20px;
-}
-
-.nav-list {
-  display: flex;
-  position: absolute;
-  -webkit-box-flex: 0;
-  -ms-flex-positive: 0;
-  flex-grow: 0;
-  position: absolute;
-  right: -20px;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-.nav-list .nav-item {
-  color: White;
-  display: block;
-  padding: 15px 15px;
-}
-.nav-list .nav-item .nav-text {
-  display: inline-block;
-  font-family: DINNextRoundedLTPro-Bold, sans-serif;
-  font-size: 15px;
-  margin-top: -7px;
-  text-transform: uppercase;
-  vertical-align: middle;
-  height: 20px;
-}
-.nav-list .nav-item-active {
-  border-bottom: 2px solid #fff;
-}
-.nav-list .cl-text {
-  color: White;
-}
-
-.nav-icon {
-  font-size: 24px;
-}
-
-footer .quick-links {
-  margin-bottom: 20px;
-  margin-top: 90px;
-  text-align: center;
-}
-footer .quick-links .link-item {
-  color: #c4c4c4;
-  font-weight: bold;
-  margin: 20px;
-  padding: 15px;
-}
 .list-decks-favor {
   padding: 2%;
+}
+.slick-slide {
+  width: 220px !important;
 }
