--- a/angular2/src/app/deck-details/deck-details.component.css
+++ b/angular2/src/app/deck-details/deck-details.component.css
@@ -1,3 +1,20 @@
+.btn-favorite {
+  background-color: transparent;
+  style="width: 80%; 
+  margin-right: 5px;
+  color: #32cdff;
+  border: 2px solid #32cdff;
+}
+
+.btn-favorited {
+  background-color: #32cdff;
+  style="width: 80%; 
+  margin-right: 5px;
+  color: white;
+  border: 2px solid #32cdff;
+}
+
+
 .left {
   padding: 20px;
 }
