--- a/angular2/src/app/deck-details/deck-details.component.html
+++ b/angular2/src/app/deck-details/deck-details.component.html
@@ -20,7 +20,7 @@
             </div>
           </div>
           <div class="favorite">
-            <button type="button" class="btn btn-outline-success" style="width: 80%; margin-right: 5px; background-color: #32cdff; color: white; border: 2px solid #32cdff;"><i class="fa fa-star-o" aria-hidden="true"></i> FAVORITE</button>
+            <button (click)="toogleFavorite()" [class.btn-favorited]="favorited" type="button" class="btn btn-outline-success btn-favorite"><i class="fa fa-star-o" aria-hidden="true"></i> FAVORITE</button>
             <button type="button" class="btn btn-outline-success" style="width: 15%; background-color: white;border: 2px solid #32cdff;"><i class="fa fa-external-link" aria-hidden="true" style="color: #32cdff;"></i></button>
           </div>
         </div>
