--- a/angular2/src/app/deck/deck.component.html
+++ b/angular2/src/app/deck/deck.component.html
@@ -8,6 +8,23 @@
     </div>
     <div class="list-decks-favor">
       <slick-carousel class="carousel">
+        <div class="slide" *ngFor="let deck of favoriteDecks">
+          <div class="item-deck">
+            <div class="image-cover">
+              <a href ="#" [routerLink]="['/decks', deck.id]">
+                <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image">
+              </a>
+            </div>
+            <div class="name">
+              <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck">{{deck.title}}</a>
+            </div>
+          </div>
+        </div>
+      </slick-carousel>
+    </div>    
+
+    <div class="list-decks-favor">
+      <slick-carousel class="carousel">
         <div class="slide" *ngFor="let deck of decks">
           <div class="item-deck">
             <div class="image-cover">
