--- a/angular2/src/app/deck/deck.component.html
+++ b/angular2/src/app/deck/deck.component.html
@@ -21,8 +21,11 @@
           </div>
         </div>
       </slick-carousel>
-    </div>    
+    </div>
 
+    <div class="title">
+      <span class="txt">All decks</span>
+    </div>
     <div class="list-decks-favor">
       <slick-carousel class="carousel">
         <div class="slide" *ngFor="let deck of decks">
