--- a/angular2/src/app/app.component.html
+++ b/angular2/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-header>
 </app-header>
-<div class="container">
-<router-outlet>
-</router-outlet>
+<div class="container" style="margin-top: 60px;">
+  <router-outlet>
+  </router-outlet>
 </div>
 <footer>
   <div class="container">
