--- a/angular2/src/app/deck-details/deck-details.component.css
+++ b/angular2/src/app/deck-details/deck-details.component.css
@@ -1,6 +1,6 @@
 .btn-favorite {
   background-color: transparent;
-  style="width: 80%; 
+  width: 80%;
   margin-right: 5px;
   color: #32cdff;
   border: 2px solid #32cdff;
@@ -8,7 +8,7 @@
 
 .btn-favorited {
   background-color: #32cdff;
-  style="width: 80%; 
+  width: 80%;
   margin-right: 5px;
   color: white;
   border: 2px solid #32cdff;
@@ -57,6 +57,10 @@
 }
 .left .txt .favorite {
   margin: auto;
+}
+.left .txt .favorite button {
+  outline: none;
+  font-family: DINNextRoundedLTPro-Medium,sans-serif;
 }
 .left .txt .btn-ct {
   margin-top: 20px;
