angular-show-user

--- a/angular2/src/app/deck-details/deck-details.component.html
+++ b/angular2/src/app/deck-details/deck-details.component.html
@@ -16,7 +16,7 @@
           <div class="author">
             <div class="img">
               <img src="./assets/images/avatar.png" alt="avatar">
-              <a href="#" class="name"> Bette</a>
+              <a href="#" [routerLink]="['/users/', user.id]" class="name">{{user.name}}</a>
             </div>
           </div>
           <div class="favorite">
