--- a/angular2/src/app/user/user.component.html
+++ b/angular2/src/app/user/user.component.html
@@ -1,87 +1,94 @@
 <!-- TO DO -->
 <!-- <section *ngIf="user">
-	<p> {{user.name}} </p>
+  <p> {{user.name}} </p>
 </section>
 <p>hihi</p>
 <div class="containerr" *ngFor="let deck of user.decks">
   <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image">
-	<p>{{deck.title}}</p>
-	<p>{{deck.desctiption}}</p>
+  <p>{{deck.title}}</p>
+  <p>{{deck.desctiption}}</p>
 </div> -->
-<div class="swap" style="margin-top: 45px">
-  <div class="row text-center user-profile">
-    <div class="col-xs-12 col-md-3 user-profile-info">
-      <div class="col-xs-12">
-        <img src="./assets/images/avatar.png" class="user-profile-avatar" alt="Default avatar">
-      </div>
-      <div class="col-xs-12">
-        <div class="col-12 user-profile-name">
-          <p> {{user.name}} </p>
+<section *ngIf="user">
+  <div class="swap" style="margin-top: 45px">
+    <div class="row text-center user-profile">
+      <div class="col-xs-12 col-md-3 user-profile-info">
+        <div class="col-xs-12">
+          <img src="./assets/images/avatar.png" class="user-profile-avatar" alt="Default avatar">
         </div>
-        <div class="user-profile-follow">
-          <div class="follow">
-            Followers: 10
+        <div class="col-xs-12">
+          <div class="col-12 user-profile-name">
+            <p> {{user.name}} </p>
           </div>
-          <div class="follow">
-            Following: 10
-          </div>
-        </div>
-        <div class="profile-device"></div>
-      </div>
-
-      <div class="col-xs-12 profile-setting">
-        <div class="row">
-          <a href="#" class="col-9">
-            <img src="./assets/images/setting.png" class="img-setting" alt="Setting">
-            <div class="text-setting">Settings</div>
-          </a>
-          <button class="col-3 button-profile">
-            <div class="button-icon">
-              <span class="fa fa-share-square-o"></span>
+          <div class="user-profile-follow">
+            <div class="follow">
+              Followers: 10
             </div>
-          </button>
+            <div class="follow">
+              Following: 10
+            </div>
+          </div>
+          <div class="profile-device"></div>
         </div>
-      </div>
-    </div>
-    <div class="col-xs-12 col-md-8 profile-content">
-      <div class="col-12 tab-header">
-        <div class="row">
-          <div (click)="openTab('b1','bb1');" id="bb1" class="tab-title tab-active"> <span>Decks</span></div>
-          <div (click)="openTab('b2','bb2');" id="bb2" class="tab-title"> <span>Followers</span></div>
-          <div (click)="openTab('b3','bb3');" id="bb3" class="tab-title"> <span>Following</span></div>
-        </div>
-      </div>
 
-      <div class="container" style="width: 100%">
-        <div id="b1" class="containerTab">
-          <div class="container-tab-content">
-            <div class="list-deck">
-              <div *ngFor="let deck of user.decks">
-                <div class="row" style="margin-bottom: 15px;">
-                  <div class="col-md-4 image-wrap">
-                    <a href ="#" [routerLink]="['/decks', deck.id]">
-                      <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image" style="width: 150px;">
-                    </a>
-                  </div>
-                  <div class="col-md-8" style="margin-top: 5px">
-                    <a href ="#" [routerLink]="['/decks', deck.id]">
-                      <div class="deck-title">{{deck.title}}</div>
-                    </a>
-                    <p>{{deck.desctiption}}</p>
+        <div *ngIf="user.id == current_user.user_id" class="col-xs-12 profile-setting">
+          <div class="row">
+            <a href="#" class="col-9">
+              <img src="./assets/images/setting.png" class="img-setting" alt="Setting">
+              <div class="text-setting">Settings</div>
+            </a>
+            <button class="col-3 button-profile">
+              <div class="button-icon">
+                <span class="fa fa-share-square-o"></span>
+              </div>
+            </button>
+          </div>
+        </div>
+
+        <div *ngIf="user.id != current_user.user_id" class="col-xs-12 profile-setting">
+          <button (click)="toogleFollow()" [class.btn-favorited]="favorited" type="button" class="btn btn-outline-success btn-favorite"><i class="fa fa-user" aria-hidden="true"></i> Follow</button>
+          <button type="button" class="btn btn-outline-success" style="width: 15%; background-color: white;border: 2px solid #32cdff;"><i class="fa fa-external-link" aria-hidden="true" style="color: #32cdff;"></i></button>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-8 profile-content">
+        <div class="col-12 tab-header">
+          <div class="row">
+            <div (click)="openTab('b1','bb1');" id="bb1" class="tab-title tab-active"> <span>Decks</span></div>
+            <div (click)="openTab('b2','bb2');" id="bb2" class="tab-title"> <span>Followers</span></div>
+            <div (click)="openTab('b3','bb3');" id="bb3" class="tab-title"> <span>Following</span></div>
+          </div>
+        </div>
+
+        <div class="container" style="width: 100%">
+          <div id="b1" class="containerTab">
+            <div class="container-tab-content">
+              <div class="list-deck">
+                <div *ngFor="let deck of user.decks">
+                  <div class="row" style="margin-bottom: 15px;">
+                    <div class="col-md-4 image-wrap">
+                      <a href ="#" [routerLink]="['/decks', deck.id]">
+                        <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image" style="width: 150px;">
+                      </a>
+                    </div>
+                    <div class="col-md-8" style="margin-top: 5px">
+                      <a href ="#" [routerLink]="['/decks', deck.id]">
+                        <div class="deck-title">{{deck.title}}</div>
+                      </a>
+                      <p>{{deck.desctiption}}</p>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <div id="b2" class="containerTab" style="display:none;">
-          <h2>FOLLOWERS</h2>
-        </div>
-        <div id="b3" class="containerTab" style="display:none;">
-          <h2>FOLLOWING</h2>
+          <div id="b2" class="containerTab" style="display:none;">
+            <h2>FOLLOWERS</h2>
+          </div>
+          <div id="b3" class="containerTab" style="display:none;">
+            <h2>FOLLOWING</h2>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+</section>
