--- a/angular2/src/app/user/user.component.html
+++ b/angular2/src/app/user/user.component.html
@@ -1,13 +1,3 @@
-<!-- TO DO -->
-<!-- <section *ngIf="user">
-  <p> {{user.name}} </p>
-</section>
-<p>hihi</p>
-<div class="containerr" *ngFor="let deck of user.decks">
-  <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image">
-  <p>{{deck.title}}</p>
-  <p>{{deck.desctiption}}</p>
-</div> -->
 <section *ngIf="user">
   <div class="swap" style="margin-top: 45px">
     <div class="row text-center user-profile">
@@ -32,7 +22,7 @@
 
         <div *ngIf="user.id == current_user.user_id" class="col-xs-12 profile-setting">
           <div class="row">
-            <a href="#" class="col-9">
+            <a href="#" [routerLink]="['setting']" class="col-9">
               <img src="./assets/images/setting.png" class="img-setting" alt="Setting">
               <div class="text-setting">Settings</div>
             </a>
