--- a/angular2/src/app/user/user.component.css
+++ b/angular2/src/app/user/user.component.css
@@ -1,3 +1,19 @@
+.btn-follow {
+  background-color: transparent;
+  width: 80%;
+  margin-right: 5px;
+  color: #32cdff;
+  border: 2px solid #32cdff;
+}
+
+.btn-followed {
+  background-color: #32cdff;
+  width: 80%;
+  margin-right: 5px;
+  color: white;
+  border: 2px solid #32cdff;
+}
+
 .user-profile .user-profile-info {
   padding: 0 15px;
 }
