add setting layout done

--- a/angular2/src/app/user/settings.component.html
+++ b/angular2/src/app/user/settings.component.html
@@ -1,4 +1,56 @@
 <section *ngIf="user">
-	{{user.name}}
-	{{user.email}}
+  <div class="wrapper">
+    <div class="row" style="margin: 0">
+      <div class="col-md-3 nav-list">
+        <div class="sidenav">
+          <ul>
+            <li class="item active" (click)="openTab('a1','aa1');" id="aa1">EDIT PROFILE</li>
+            <li class="item" (click)="openTab('a2','aa2');" id="aa2">ACCOUNT SETTINGS</li>
+            <li class="item" (click)="openTab('a3','aa3');" id="aa3">NOTIFICATIONS</li>
+            <li class="item" (click)="openTab('a4','aa4');" id="aa4">SEND FEEDBACK</li>
+            <li class="item" (click)="openTab('a5','aa5');" id="aa5">LOG OUT</li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-9">
+        <div class="change">
+          <div id="a1" class="show-value">
+            <div class="row">
+              <div class="col-md-9">
+                <label>Name</label><br>
+                <input type="text" name="txt-name" value="{{user.name}}"><br>
+                <label>Username</label><br>
+                <input type="text" name="txt-username"><br>
+                <label>Bio</label><br>
+                <input type="text" name="txt-bio"><br>
+              </div>
+              <div class="col-md-3">
+                <div class="avatar">
+                  <img src="./assets/images/avatar.png" class="user-profile-avatar" alt="Default avatar">
+                  <button type="button"><i class="fa fa-pencil"></i></button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="a2" class="show-value" style="display: none">
+            <label>Email</label><br>
+            <input type="text" name="txt-name" value="{{user.email}}"><br>
+            <label>Password</label><br>
+            <input type="password" name="txt-username" style="width: 300px"><br>
+            <label>Password confirm</label><br>
+            <input type="password" name="txt-bio" style="width: 300px"><br>
+          </div>
+          <div id="a3" class="show-value" style="display: none">
+            <h3>haha 3</h3>
+          </div>
+          <div id="a4" class="show-value" style="display: none">
+            <h3>haha 4</h3>
+          </div>
+          <div id="a5" class="show-value" style="display: none">
+            <h3>haha 5</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
